Added Create Model and Common Method

--- a/LottoProject.Web/LottoProject.Web.csproj
+++ b/LottoProject.Web/LottoProject.Web.csproj
@@ -200,6 +200,7 @@
     <Compile Include="Infrastructure\LottoDb.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountModels.cs" />
+    <Compile Include="Models\DrawCreateModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
